// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Track renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-155 0 200 210"
      x="0"
      y="0"
    >
      <defs />
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform=""
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform=""
      >
        <path
          class="ground"
          d="M -45 110 A 10 10 0 0 1 -55 120 L -54.99999999999999 210 A 100 100 0 0 0 45 110 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -45 110 A 10 10 0 0 1 -47.928932188134524 117.07106781186548 L -44.39339828220179 120.60660171779821 A 15 15 0 0 0 -40 110 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -47.928932188134524 117.07106781186548 A 10 10 0 0 1 -55 120 L -55 125 A 15 15 0 0 0 -44.39339828220179 120.60660171779821 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M 40 110 A 95 95 0 0 1 32.76855558857224 146.35492607468353 L 37.38795325112868 148.26834323650897 A 100 100 0 0 0 45 110 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 32.76855558857224 146.35492607468353 A 95 95 0 0 1 12.175144212722017 177.175144212722 L 15.710678118654755 180.71067811865476 A 100 100 0 0 0 37.38795325112868 148.26834323650897 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 12.175144212722017 177.175144212722 A 95 95 0 0 1 -18.645073925316467 197.76855558857224 L -16.731656763491017 202.3879532511287 A 100 100 0 0 0 15.710678118654755 180.71067811865476 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -18.645073925316467 197.76855558857224 A 95 95 0 0 1 -54.99999999999999 205 L -54.99999999999999 210 A 100 100 0 0 0 -16.731656763491017 202.3879532511287 Z"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(90 -55 165)"
      >
        <path
          class="ground"
          d="M -100 165 A 10 10 0 0 1 -110 175 L -110 265 L -55 265 A 45 45 0 0 0 -10 220 L -10 165 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -100 165 A 10 10 0 0 1 -102.92893218813452 172.07106781186548 L -99.39339828220179 175.6066017177982 A 15 15 0 0 0 -95 165 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -102.92893218813452 172.07106781186548 A 10 10 0 0 1 -110 175 L -110 180 A 15 15 0 0 0 -99.39339828220179 175.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -15 220 A 40 40 0 0 1 -26.715728752538098 248.2842712474619 L -23.18019484660536 251.81980515339464 A 45 45 0 0 0 -10 220 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -26.715728752538098 248.2842712474619 A 40 40 0 0 1 -55 260 L -55 265 A 45 45 0 0 0 -23.18019484660536 251.81980515339464 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="-110"
            y="260"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="-82.5"
            y="260"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="165"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="192.5"
          />
        </g>
      </g>
      
      
    </svg>
    
  </div>
</body>
`;

exports[`Track renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175 230 240"
      width="400"
      x="100"
      y="200"
    >
      <defs />
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform="rotate(90 0 0)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          class="ground"
          d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -165 10.000000000000007 L -165 100 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -157.92893218813452 7.071067811865482 L -154.3933982822018 10.606601717798219 A 15 15 0 0 0 -150 6.735557395310443e-15 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -157.92893218813452 7.071067811865482 A 10 10 0 0 1 -165 10.000000000000007 L -165 15.000000000000007 A 15 15 0 0 0 -154.3933982822018 10.606601717798219 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -70 6.735557395310443e-15 A 95 95 0 0 1 -77.23144441142776 36.35492607468353 L -72.61204674887132 38.26834323650898 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -77.23144441142776 36.35492607468353 A 95 95 0 0 1 -97.82485578727798 67.175144212722 L -94.28932188134524 70.71067811865474 A 100 100 0 0 0 -72.61204674887132 38.26834323650898 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.82485578727798 67.175144212722 A 95 95 0 0 1 -128.64507392531647 87.76855558857224 L -126.73165676349102 92.38795325112868 A 100 100 0 0 0 -94.28932188134524 70.71067811865474 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -128.64507392531647 87.76855558857224 A 95 95 0 0 1 -165 95 L -165 100 A 100 100 0 0 0 -126.73165676349102 92.38795325112868 Z"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          class="ground"
          d="M -210 -54.99999999999999 A 10 10 0 0 1 -220 -44.99999999999999 L -220 45.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -120 7.105427357601002e-15 L -120 -54.99999999999999 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -210 -54.99999999999999 A 10 10 0 0 1 -212.92893218813452 -47.92893218813452 L -209.3933982822018 -44.39339828220178 A 15 15 0 0 0 -205 -54.99999999999999 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -212.92893218813452 -47.92893218813452 A 10 10 0 0 1 -220 -44.99999999999999 L -220 -39.99999999999999 A 15 15 0 0 0 -209.3933982822018 -44.39339828220178 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -125 7.105427357601002e-15 A 40 40 0 0 1 -136.7157287525381 28.284271247461906 L -133.18019484660536 31.819805153394643 A 45 45 0 0 0 -120 7.105427357601002e-15 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -136.7157287525381 28.284271247461906 A 40 40 0 0 1 -165 40.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -133.18019484660536 31.819805153394643 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="-220"
            y="40.00000000000001"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="-192.5"
            y="40.00000000000001"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-125"
            y="-54.99999999999999"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-125"
            y="-27.499999999999993"
          />
        </g>
      </g>
      
      
    </svg>
    
  </div>
</body>
`;

exports[`Track update when the model is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175.00000000000003 230 240.00000000000003"
      width="400"
      x="100"
      y="200"
    >
      <defs />
      
      <g
        class="tile straight-tile"
        id="id-0"
        transform="rotate(90 0 0)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-45"
          y="0"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="0"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-45"
            y="55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-45"
            y="82.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="0"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="27.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="40"
            y="55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="40"
            y="82.5"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        id="id-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          class="ground"
          d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -165 10.000000000000007 L -165 100 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -155 6.735557395310443e-15 A 10 10 0 0 1 -157.92893218813452 7.071067811865482 L -154.3933982822018 10.606601717798219 A 15 15 0 0 0 -150 6.735557395310443e-15 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -157.92893218813452 7.071067811865482 A 10 10 0 0 1 -165 10.000000000000007 L -165 15.000000000000007 A 15 15 0 0 0 -154.3933982822018 10.606601717798219 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -70 6.735557395310443e-15 A 95 95 0 0 1 -77.23144441142776 36.35492607468353 L -72.61204674887132 38.26834323650898 A 100 100 0 0 0 -65 6.735557395310443e-15 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -77.23144441142776 36.35492607468353 A 95 95 0 0 1 -97.82485578727798 67.175144212722 L -94.28932188134524 70.71067811865474 A 100 100 0 0 0 -72.61204674887132 38.26834323650898 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.82485578727798 67.175144212722 A 95 95 0 0 1 -128.64507392531647 87.76855558857224 L -126.73165676349102 92.38795325112868 A 100 100 0 0 0 -94.28932188134524 70.71067811865474 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -128.64507392531647 87.76855558857224 A 95 95 0 0 1 -165 95 L -165 100 A 100 100 0 0 0 -126.73165676349102 92.38795325112868 Z"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        id="id-2"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          class="ground"
          d="M -210 -54.99999999999999 A 10 10 0 0 1 -220 -44.99999999999999 L -220 45.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -120 7.105427357601002e-15 L -120 -54.99999999999999 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -210 -54.99999999999999 A 10 10 0 0 1 -212.92893218813452 -47.92893218813452 L -209.3933982822018 -44.39339828220178 A 15 15 0 0 0 -205 -54.99999999999999 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -212.92893218813452 -47.92893218813452 A 10 10 0 0 1 -220 -44.99999999999999 L -220 -39.99999999999999 A 15 15 0 0 0 -209.3933982822018 -44.39339828220178 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -125 7.105427357601002e-15 A 40 40 0 0 1 -136.7157287525381 28.284271247461906 L -133.18019484660536 31.819805153394643 A 45 45 0 0 0 -120 7.105427357601002e-15 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -136.7157287525381 28.284271247461906 A 40 40 0 0 1 -165 40.00000000000001 L -165 45.00000000000001 A 45 45 0 0 0 -133.18019484660536 31.819805153394643 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="-220"
            y="40.00000000000001"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="-192.5"
            y="40.00000000000001"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-125"
            y="-54.99999999999999"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-125"
            y="-27.499999999999993"
          />
        </g>
      </g>
      
      
      <g
        class="tile straight-tile"
        id="id-3"
        transform="rotate(270 -110 -110)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-155"
          y="-110"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-155"
            y="-110"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-155"
            y="-82.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-155"
            y="-55"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-155"
            y="-27.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-70"
            y="-110"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-70"
            y="-82.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-70"
            y="-55"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-70"
            y="-27.5"
          />
        </g>
      </g>
      
      
    </svg>
    
  </div>
</body>
`;
